syntax="proto3";
message Cashflow{
   double int_amt = 1;
   double prin_amt = 2;
   int64 date = 3;
}
message AccountWithCashflows{
    string entity = 1;
    string trade_id = 2;
    int64 contract_id = 3;
    int64 struct_id_link_id = 4;
    string comp_typology = 5;
    string pkg_typology = 6;
    string cntrct_typology = 7;
    string desk = 8;
    string book = 9;
    string folder = 10;
    string trading_banking = 11;
    string cntr_prty_grp_cd = 12;
    string cntr_prty_chld_cd = 13;
    string cntr_prty_name = 14;
    string intrnl_extrnl = 15;
    int64 trade_dt = 16;
    int64 st_dt = 17;
    int64 ed_dt = 18;
    string ccy_pair = 19;
    string rec_leg_ccy = 20;
    double org_notional_rec_leg = 21;
    double org_notional_rec_leg_inr = 22;
    double ost_notional_rec_leg =23;
    double ost_notional_rec_leg_inr = 24;
    string pay_leg_ccy = 25;
    double org_notional_pay_leg = 26;
    double org_notional_pay_leg_inr = 27;
    double ost_notional_pay_leg = 28;
    double ost_notional_pay_leg_inr = 29;
    string deal_side =30;
    string pay_leg_idx=31;
    double pay_int_rt=32;
    double spread_pay_leg=33;
    string rec_leg_idx=34;
    double rec_int_rt=35;
    double spread_rec_leg=36;
    double rec_side_acrl_inr=37;
    double rec_side_mtm_inr=38;
    string future_cash_proceeds_ccy=39;
    double future_cash_proceeds_inr =40;
    double mrkt_val_financed = 41;
    double net_mtm_usd = 42;
    double net_mtm_inr = 43;
    double pay_side_pv01_inr = 44;
    double rec_side_pv01_inr =45;
    double net_pv01_inr = 46;
    double pay_side_modified_duration =47;
    double receive_side_modified_duration =48;
    double modified_duration_deal = 49;
    double pay_leg_exchange_rt =50;
    double rec_leg_exchange_rt =51;
    int64 pay_reset_dt = 52;
    int64 rec_reset_dt =53;
    int64 pay_payment_dt = 54;
    int64 rec_payment_dt =55;
    string index_rec_leg =56;
    string index_pay_leg =57;
    string day_count_cnvntn_rec_leg = 58;
    string day_count_cnvntn_pay_leg =59;
    string pay_reset_freq =60;
    string rec_reset_freq =61;
    string pay_payment_freq =62;
    string rec_payment_freq=63;
    string deal_status=64;
    string flowtype = 65;
    string flowtype1 = 66;
    string flowtype2 = 67;
    string flowtype3 = 68;
    string flowtype4 = 69;
    double flowamount = 70;
    int64 cf_dt=71;
    string flow_ccy=72;
    double hkd_rt=73;
    double hkd_amt=74;
    int64 m_h_rep_dt2 =75;
    double inr_amt=76;
    double inr_rt=77;
    double int_rt=78;
    double tot_int_amt=79;
    double tot_prin_amt =80;
    string contract_usage = 81;
    string non_index_flow_currency = 82;
    double non_index_cf_amt = 83;
    int64 indexation_dt = 84;
    repeated Cashflow cashflows = 85;
}